@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-04T01:24:21Z",
-  "count_outdated" : 1862,
-  "uniques_outdated" : 1102,
+  "timestamp" : "2025-06-06T01:23:10Z",
+  "count_outdated" : 1863,
+  "uniques_outdated" : 1103,
   "count" : 1865,
   "uniques" : 1105,
   "clones" : [
-    {
-      "timestamp": "2025-05-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-25T00:00:00Z",
       "count": 1,
